--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#607D8B</color>
     <color name="colorPrimaryDark">#455A64</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="gray_700">#616161</color>
+    <color name="gray_900">#212121</color>
 </resources>
