--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="colorPrimaryDark">#455A64</color>
     <color name="colorAccent">#D81B60</color>
 
+
+    <color name="gray_300">#E0E0E0</color>
+    <color name="gray_500">#9E9E9E</color>
     <color name="gray_700">#616161</color>
     <color name="gray_900">#212121</color>
 </resources>
