--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
@@ -13,11 +13,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        app:navigationIcon="@drawable/ic_arrow_back_light">
+        app:navigationIcon="@drawable/ic_arrow_back_light"
+        android:layout_alignParentTop="true">
 
     </androidx.appcompat.widget.Toolbar>
 
     <RelativeLayout
+        android:layout_below="@id/toolbar"
         android:id="@+id/news_container"
         android:layout_width="match_parent"
         android:layout_height="150dp"
@@ -81,13 +83,13 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"/>
 
-
     </RelativeLayout>
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_comment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:listitem="@layout/holder_comment"/>
-</LinearLayout>
+        android:layout_height="match_parent"
+        tools:listitem="@layout/holder_comment"
+        android:layout_below="@id/news_container"/>
+</RelativeLayout>
