--- a/app/src/main/res/layout/fragment_newslist.xml
+++ b/app/src/main/res/layout/fragment_newslist.xml
@@ -10,8 +10,18 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true">
 
+        <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/action_bar_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/spinner_item"
+            android:backgroundTint="@android:color/white"
+            android:gravity="start">
+        </androidx.appcompat.widget.AppCompatSpinner>
+
+    </androidx.appcompat.widget.Toolbar>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
