--- a/app/src/main/res/layout/holder_comment.xml
+++ b/app/src/main/res/layout/holder_comment.xml
@@ -8,19 +8,19 @@
     <View
         android:id="@+id/comment2"
         android:layout_width="2dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignBottom="@+id/divider"
         android:background="@color/colorPrimary"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:visibility="gone"/>
     <View
         android:id="@+id/comment3"
         android:layout_width="2dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignBottom="@+id/divider"
         android:background="@color/colorPrimary"
         android:layout_toEndOf="@id/comment2"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="32dp"
         android:visibility="gone"/>
 
     <ImageView
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_person"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:layout_toEndOf="@id/comment3"/>
 
@@ -39,7 +39,7 @@
         tools:text="Ronald"
         android:textSize="16sp"
         android:textColor="@color/colorPrimary"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginStart="8dp"
         android:layout_toEndOf="@id/iv_person"
         android:layout_alignParentTop="true"/>
@@ -51,7 +51,7 @@
         tools:text="30 Dec 2019, 12:30"
         android:textSize="12sp"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"/>
 
 
